Minor fixes on Safari

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -50,6 +50,10 @@
     .row {
       display: flex;
       flex-wrap: wrap;
+
+      &:before {
+        display: none;
+      }
     }
 
     .footer-column {
